--- a/assets/sass/_theme/blocks/_timeline.sass
+++ b/assets/sass/_theme/blocks/_timeline.sass
@@ -2,9 +2,16 @@
     --min-title-height: 0px
     background-color: $primary
     color: white
+    margin-bottom: 8rem
     overflow: hidden
     padding-bottom: $grid-gutter-width
     padding-top: $grid-gutter-width
+    @include media-breakpoint-down(md)
+        margin-bottom: 3rem
+    &:first-of-type
+        margin-top: 4rem
+        @include media-breakpoint-down(md)
+            margin-top: 1rem
     &::before
         display: none
     .timeline-arrows
