update timeline block

--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -146,6 +146,6 @@
             @include media-breakpoint-up(lg)
                 margin-bottom: px2rem(160)
 
-    .block-timeline,
+    .block-timeline--horizontal,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $program-color
