--- a/assets/sass/diplomas/_pages.sass
+++ b/assets/sass/diplomas/_pages.sass
@@ -21,7 +21,7 @@
         dd:first-of-type
             display: none
 
-    .block-timeline,
+    .block-timeline--horizontal,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $program-color
 
