--- a/assets/sass/persons/_pages.sass
+++ b/assets/sass/persons/_pages.sass
@@ -9,7 +9,7 @@
                     color: $gray-500
         .active
             color: $institute-color
-    .block-timeline,
+    .block-timeline--horizontal,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $institute-color
 
