--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -47,7 +47,7 @@
                 height: 1px
                 margin-bottom: 2rem
 
-    .block-timeline,
+    .block-timeline--horizontal,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $post-color
 
