--- a/assets/sass/persons/_pages.sass
+++ b/assets/sass/persons/_pages.sass
@@ -1,3 +1,14 @@
+.administrators__taxonomy,
+.authors__taxonomy,
+.teachers__taxonomy
+    main.page-with-blocks
+        padding-bottom: $grid-gutter-width * 2.5
+        .hero
+            margin-bottom: 4rem
+            @include media-breakpoint-up(md)
+                margin-bottom: px2rem(120)
+
+
 .persons__section
     .toc
         ol
