--- a/layouts/partials/persons/list-specific.html
+++ b/layouts/partials/persons/list-specific.html
@@ -1,5 +1,5 @@
 <table class="table-persons">
-  <caption></caption>
+  <caption>{{ partial "PrepareHTML" .Title }}</caption>
   <tbody>
     {{- range (.Paginate (.Pages.ByParam "last_name")).Pages -}}
       {{- $person := site.GetPage (printf "/persons/%s" .Slug) -}}
