--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,18 +1,33 @@
+@import "_theme/utils"
+
+@import "_config"
+
 @import "_theme/hugo-osuny"
 
-@import "_default/abstracts/mixins"
+//@import "_default/abstracts/mixins"
+@import "_utils"
 
-@import "_default/layouts/content"
-@import "_default/layouts/footer"
-@import "_default/layouts/header"
-@import "_default/layouts/main"
+//@import "_default/layouts/content"
+@import "partials/body/content"
+//@import "_default/layouts/footer"
+@import "partials/footer/footer"
+//@import "_default/layouts/header"
+@import "partials/header/header"
+//@import "_default/layouts/main"
+@import "partials/layouts/main"
 
-@import "_default/partials/featured-image"
-@import "_default/partials/hero"
-@import "_default/partials/menu"
-@import "_default/partials/menu-expand"
-@import "_default/partials/sticky"
-@import "_default/partials/top"
+//@import "_default/partials/featured-image"
+@import "partials/body/featured-image"
+//@import "_default/partials/hero"
+@import "partials/header/hero"
+//@import "_default/partials/menu"
+@import "partials/nav/menu"
+//@import "_default/partials/menu-expand"
+@import "partials/nav/menu-expand"
+//@import "_default/partials/sticky"
+@import "partials/nav/sticky"
+//@import "_default/partials/top"
+@import "partials/body/top"
 
 @import "_vendors/bootstrap/breadcrumb"
 @import "_vendors/bootstrap/buttons"
@@ -20,13 +35,19 @@
 @import "_vendors/bootstrap/pagination"
 @import "_vendors/bootstrap/table"
 
-@import "blocks/call_to_action"
-@import "blocks/chapter"
-@import "blocks/files"
-@import "blocks/gallery"
+//@import "blocks/call_to_action"
+@import "partials/blocks/call_to_action"
+//@import "blocks/chapter"
+@import "partials/blocks/chapter"
+//@import "blocks/files"
+@import "partials/blocks/files"
+//@import "blocks/gallery"
+@import "partials/blocks/gallery"
 // @import "blocks/key_figures"
-@import "blocks/pages"
-@import "blocks/video"
+//@import "blocks/pages"
+@import "partials/blocks/pages"
+//@import "blocks/video"
+@import "partials/blocks/video"
 
 @import "diplomas/pages"
 @import "diplomas/widgets"
