Fixed text decoration for CTA

--- a/assets/sass/partials/blocks/_call_to_action.sass
+++ b/assets/sass/partials/blocks/_call_to_action.sass
@@ -20,6 +20,7 @@
                         border: 0
                         color: $white
                         margin-left: - $btn-padding-x
+                        text-decoration-color: $white
                         text-decoration-thickness: 1px
                         &:hover
                             color: $white
