--- a/assets/sass/diplomas/_widgets.sass
+++ b/assets/sass/diplomas/_widgets.sass
@@ -17,13 +17,16 @@ ul.diplomas
                     width: 50%
         a:first-of-type
             @extend .h4
+            margin-bottom: 0
             @include media-breakpoint-up(md)
                 padding-right: calc(#{$grid-gutter-width} / 2)
             &::after
                 content: none
         p
             margin-bottom: 0
+            margin-top: 1.5rem
             @include media-breakpoint-up(md)
+                margin-top: 0
                 padding-left: calc(#{$grid-gutter-width} / 2)
 
 
