--- a/assets/sass/programs/_widgets.sass
+++ b/assets/sass/programs/_widgets.sass
@@ -14,6 +14,8 @@ ol.programs
                 color: $program-color
         a:first-of-type
             @extend .h3
+            flex: 1
+            margin-bottom: 0
             @include media-breakpoint-up(md)
                 &::after
                     opacity: 0
