--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -28,6 +28,7 @@
 @import "partials/blocks/files"
 @import "partials/blocks/gallery"
 @import "partials/blocks/pages"
+@import "partials/blocks/testimonials"
 @import "partials/blocks/video"
 
 @import "home/pages"
