--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -28,6 +28,10 @@
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $institute-color
 
+    .block-testimonials
+        blockquote
+            color: $institute-color
+
     @include media-breakpoint-down(md)
         .featured-image
             border: 0
