--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -51,6 +51,10 @@
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $post-color
 
+    .block-testimonials
+        blockquote
+            color: $post-color
+
     .content-blocks
         > aside
             > div
