--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -150,3 +150,7 @@
     .block-timeline--horizontal,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $program-color
+
+    .block-testimonials
+        blockquote
+            color: $program-color
