--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -15,6 +15,7 @@
 @import "partials/body/content"
 @import "partials/body/featured-image"
 @import "partials/body/top"
+@import "partials/body/typography"
 @import "partials/footer/footer"
 @import "partials/header/header"
 @import "partials/header/hero"
