add breakpoint to testimonial

--- a/assets/sass/partials/blocks/_testimonials.sass
+++ b/assets/sass/partials/blocks/_testimonials.sass
@@ -5,6 +5,8 @@
         p
             font-size: px2rem(24)
             line-height: 120%
-            @include media-breakpoint-up(lg)
+            @include media-breakpoint-up(md)
+                font-size: px2rem(30)
+            @include media-breakpoint-up(xl)
                 font-size: px2rem(60)
                 line-height: 110%
