--- a/assets/sass/partials/header/_header.sass
+++ b/assets/sass/partials/header/_header.sass
@@ -8,6 +8,9 @@ header[role="banner"]
             background-color: rgba(black, 0.2)
         .logo img
             filter: invert(1)
+        @include media-breakpoint-down(lg)
+            .navbar
+                padding-bottom: 0
 
     @include media-breakpoint-up(md)
         &::after
