--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -5,7 +5,7 @@
 @import "_theme/hugo-osuny"
 
 @import "_utils"
-
+/*! purgecss start ignore */
 @import "_vendors/bootstrap/breadcrumb"
 @import "_vendors/bootstrap/buttons"
 @import "_vendors/bootstrap/container"
@@ -46,3 +46,4 @@
 @import "programs/widgets"
 
 @import "sitemap/pages"
+/*! purgecss end ignore */
