--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -16,9 +16,13 @@
                     margin-bottom: 0
                 > a
                     @extend .tabtitle
-                    color: $gray-500
+                    color: $gray-600
                     &:hover
-                        text-decoration-color: $gray-500
+                        text-decoration-color: $gray-600
+                    @include media-breakpoint-down(md)
+                        color: $gray-300
+                        &:hover
+                            text-decoration-color: $gray-300
         .active
             color: $institute-color
             &:hover
