--- a/layouts/pages/list.html
+++ b/layouts/pages/list.html
@@ -16,23 +16,7 @@
       <div class="blocks blocks-chapo">
         <div class="container">
           <div class="block-content">
-            {{- with .Params.image -}}
-              <figure class="featured-image">
-                {{ partial "commons/image.html"
-                      (dict
-                        "image"    .
-                        "mobile"   "351x168"
-                        "tablet"   "456x219"
-                        "desktop"  "856x410"
-                        "itemprop" true
-                      )}}
-                {{- if isset . "credit" -}}
-                  {{ if partial "GetTextFromHTML" .credit }}
-                    <figcaption>{{ partial "PrepareHTML" .credit }}</figcaption>
-                  {{ end }}
-                {{- end -}}
-              </figure>
-            {{- end -}}
+            {{ partial "pages/image.html" .Params.image }}
             {{ partial "pages/chapo.html" .Params.description_short }}
           </div>
         </div>
@@ -41,7 +25,13 @@
       {{ partial "blocks/list.html" .Params.blocks }}
     </div>
   {{ else }}
-    {{ partial "pages/image.html" .Params.image }}
+    {{- with .Params.image -}}
+      <section>
+        <div class="container">
+          {{ partial "pages/image.html" . }}
+        </div>
+      </section>
+    {{- end -}}
     <div class="container">
       {{ partial "pages/chapo.html" .Params.description_short }}
     </div>
