programs cta color

--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -155,7 +155,7 @@
                 margin-bottom: px2rem(160)
 
     .block-timeline--horizontal,
-    .blocks .block-call_to_action .call_to_action > div
+    &:not(.page-program) .blocks .block-call_to_action .call_to_action > div
         background-color: $program-color
     .block-testimonials
         blockquote
