--- a/assets/sass/partials/blocks/_gallery.sass
+++ b/assets/sass/partials/blocks/_gallery.sass
@@ -1,4 +1,8 @@
 .block-gallery
+    .top
+        .description
+            @include in-page-without-aside
+                @extend .col-md-7
     &--carousel
         background-color: black
         color: white
