correct font-size for mobile breadcrumb

--- a/assets/sass/_vendors/bootstrap/_breadcrumb.sass
+++ b/assets/sass/_vendors/bootstrap/_breadcrumb.sass
@@ -1,10 +1,11 @@
 .breadcrumb
     align-items: baseline
+    @include media-breakpoint-down(md)
+        font-size: px2rem(14)
     @include media-breakpoint-up(md)
         margin-left: -.4rem
         padding-left: .4rem
     &-item
-        font-size: px2rem(14)
         padding: .3rem 0
         @include media-breakpoint-up(md)
             font-size: $breadcrumb-font-size
