--- a/layouts/partials/programs/hero-single.html
+++ b/layouts/partials/programs/hero-single.html
@@ -10,10 +10,7 @@
   </div>
   <div id="essential">
     <div class="container">
-      {{- with .Params.diplomas -}}
-        {{- $diploma := site.GetPage (printf "/diplomas/%s" .) -}}
-        {{- partial "diplomas/essential" $diploma -}}
-      {{- end -}}
+      {{- partial "programs/essential" . -}}
       <div class="dropdown-share dropup">
         <button type="button" id="shareProgram" data-bs-toggle="dropdown" aria-expanded="false">{{ i18n "commons.share" }}</button>
         <div class="dropdown-menu">
