cta title margin

--- a/assets/sass/partials/blocks/_call_to_action.sass
+++ b/assets/sass/partials/blocks/_call_to_action.sass
@@ -1,5 +1,10 @@
 .block-call_to_action
     .call_to_action
+        h2
+            @include media-breakpoint-up(md)
+                margin-top: px2rem(-7)
+            @include media-breakpoint-up(xl)
+                margin-top: px2rem(-14)
         p
             a
                 color: white
