--- a/assets/sass/diplomas/_pages.sass
+++ b/assets/sass/diplomas/_pages.sass
@@ -1,9 +1,5 @@
 .diplomas__taxonomy,
 .diplomas__term
-    .page-with-blocks
-        .hero
-            @include media-breakpoint-up(md)
-                margin-bottom: px2rem(120)
     header[role="banner"]:not(.is-sticky)
         html:not(.is-menu-open) &
             background-color: $program-color
@@ -27,6 +23,10 @@
 
 
 .diplomas__taxonomy
+    .page-with-blocks
+        .hero
+            @include media-breakpoint-up(md)
+                margin-bottom: px2rem(120)
     .diplomas
         @include media-breakpoint-up(md)
             margin-bottom: px2rem(120)
@@ -35,6 +35,15 @@
 
 
 .diplomas__term
+    .page-with-blocks
+        .hero
+            margin-bottom: 0
+        ol.programs
+            margin-bottom: px2rem(60)
+            @include media-breakpoint-up(md)
+                margin-bottom: px2rem(120)
+            @include media-breakpoint-up(lg)
+                margin-bottom: px2rem(160)
     ol.programs
         li
             a:first-of-type
