--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,4 +1,15 @@
 @import "_theme/utils"
 
+// Site variables
+$recherche: #EB7100
+$site-color: #4C1540
+$institute-color: #32538D
+$post-color: #312783
+$program-color: #006633
+
 $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+
+$hero-background-color: $site-color
+$header-background-color: $site-color
+$header-color: white
