blocks cta and pages (cards), footer

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -6,10 +6,19 @@ $site-color: #4C1540
 $institute-color: #32538D
 $post-color: #312783
 $program-color: #006633
+$main-color: black
 
 $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
 $hero-background-color: $site-color
 $header-background-color: $site-color
+// faire une variable $header-dropdown-background-color ?
 $header-color: white
+
+$footer-color: white
+$footer-background-color: $main-color
+
+$block-call-to-action-background: $institute-color
+
+$block-pages-card-page-background-hover: $site-color
