config toc and block timeline

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -19,6 +19,11 @@ $header-color: white
 $footer-color: white
 $footer-background-color: $main-color
 
+$toc-color: #6c757d
+$toc-active-color: $institute-color
+
 $block-call-to-action-background: $institute-color
 
 $block-pages-card-page-background-hover: $site-color
+
+$block-timeline-horizontal-background: $institute-color
