header height config

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -13,8 +13,10 @@ $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Rob
 
 $hero-background-color: $site-color
 $header-background-color: $site-color
-// faire une variable $header-dropdown-background-color ?
+// TODO:  variable $header-dropdown-background-color ?
 $header-color: white
+$header-height: 82px
+$header-height-md: 102px
 
 $footer-color: white
 $footer-background-color: $main-color
@@ -27,3 +29,7 @@ $block-call-to-action-background: $institute-color
 $block-pages-card-page-background-hover: $site-color
 
 $block-timeline-horizontal-background: $institute-color
+
+// TODO: 
+//      variable pour le hover des liens de formation ? 
+//      variable pour le bg de sélection ?
