theme and config

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -8,18 +8,27 @@ $post-color: #312783
 $program-color: #006633
 $main-color: black
 
+// Fonts
 $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
+$h1-weight: bold
+
+    
 $hero-background-color: $site-color
 $header-background-color: $site-color
 // TODO:  variable $header-dropdown-background-color ?
 $header-color: white
 $header-height: 82px
 $header-height-md: 102px
+$header-logo-height: 42px
 
 $footer-color: white
 $footer-background-color: $main-color
+
+// Hero
+$hero-height: 300px
+$hero-height-md: calc(650px - #{$header-height-md})
 
 $toc-color: #6c757d
 $toc-active-color: $institute-color
