--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,4 +1,6 @@
 @import "configuration"
 @import "_theme/hugo-osuny"
 @import "design-system/typography"
+@import "sections/home"
+@import "sections/posts"
 
