--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -11,6 +11,8 @@ $main-color: black
 $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
+$h2-size-md: px2rem(24)
+
 $hero-background-color: $site-color
 $header-background-color: $site-color
 // TODO:  variable $header-dropdown-background-color ?
@@ -33,3 +35,4 @@ $block-timeline-horizontal-background: $institute-color
 // TODO: 
 //      variable pour le hover des liens de formation ? 
 //      variable pour le bg de sélection ?
+//      variable pour le bg du dropdown dans le dropdown-share ? (bc background: invert($hero-background-color) donne un vert pas joli)
