--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -6,6 +6,7 @@ $site-color: #4C1540
 $institute-color: #32538D
 $post-color: #312783
 $program-color: #006633
+
 $main-color: black
 
 // Fonts
@@ -36,12 +37,15 @@ $toc-color: #6c757d
 $toc-active-color: $institute-color
 
 $block-call-to-action-background: $institute-color
-
+$block-call-to-action-color: white
+$block-call-to-action-button-background : white
 $block-pages-card-page-background-hover: $site-color
 
 $block-timeline-horizontal-background: $institute-color
 
 // TODO: 
+//      variable pour les liens de la nav (pour le text-decoration) ?
 //      variable pour le hover des liens de formation ? 
 //      variable pour le bg de sélection ?
 //      variable pour le bg du dropdown dans le dropdown-share ? (bc background: invert($hero-background-color) donne un vert pas joli)
+//      variable (true/false ? ; 0px par défaut ?) pour la bordure inférieure du header / idem pour le footer ?
