Config lead class

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -36,12 +36,17 @@ $hero-height-md: calc(650px - #{$header-height-md})
 $toc-color: #6c757d
 $toc-active-color: $institute-color
 
+// CTA
 $block-call-to-action-background: $institute-color
 $block-call-to-action-color: white
 $block-call-to-action-button-background : white
 $block-pages-card-page-background-hover: $site-color
 
+// Timeline
 $block-timeline-horizontal-background: $institute-color
+
+// Person
+$persons-avatar-background-color: #F5F5F5
 
 // TODO: 
 //      variable pour les liens de la nav (pour le text-decoration) ?
