--- a/assets/sass/design-system/typography.sass
+++ b/assets/sass/design-system/typography.sass
@@ -29,3 +29,10 @@
     font-weight: bold
     src: url('../fonts/Inter/Inter.woff2') format('woff2'), url('../fonts/Inter/Inter.woff') format('woff')
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
+
+.lead
+    &,
+    p            
+        font-size: $h2-size
+        @include media-breakpoint-up(md)
+            font-size: $h1-size-md
