Config h3 and lead for pages with aside

--- a/assets/sass/design-system/typography.sass
+++ b/assets/sass/design-system/typography.sass
@@ -36,3 +36,5 @@
         font-size: $h2-size
         @include media-breakpoint-up(md)
             font-size: $h1-size-md
+        @include in-page-with-aside
+            font-size: $h3-size-md
