--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -14,6 +14,7 @@ $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helve
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
 $h2-size-md: px2rem(24)
+$h3-size-md: px2rem(40)
 
 $h1-weight: bold
 
