--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,4 +1,5 @@
 @import "_theme/utils"
+@import "_theme/configuration"
 
 // Site variables
 $recherche: #EB7100
@@ -18,14 +19,11 @@ $h3-size-md: px2rem(40)
 
 $h1-weight: bold
 
-    
 $hero-background-color: $site-color
 $header-background-color: $site-color
 // TODO:  variable $header-dropdown-background-color ?
 $header-color: white
-$header-height: 82px
-$header-height-md: 102px
-$header-logo-height: 42px
+$header-logo-height: 42px !important
 
 $footer-color: white
 $footer-background-color: $main-color
