--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,5 +1,4 @@
 @import "_theme/utils"
-@import "_theme/configuration"
 
 // Site variables
 $recherche: #EB7100
@@ -30,7 +29,7 @@ $footer-background-color: $main-color
 
 // Hero
 $hero-height: 300px
-$hero-height-md: calc(650px - #{$header-height-md})
+$hero-height-md: calc(650px - var(--header-height))
 
 $toc-color: #6c757d
 $toc-active-color: $institute-color
