--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -13,8 +13,12 @@ $main-color: black
 $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
-$h2-size-md: px2rem(24)
+$h5-size: px2rem(16)
+$h2-size-md: px2rem(50)
 $h3-size-md: px2rem(40)
+$h4-size-md: px2rem(28)
+$h5-size-md: px2rem(24)
+$h6-size-md: px2rem(22)
 
 $h1-weight: bold
 
