--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -24,8 +24,9 @@ $h1-weight: bold
 
 $hero-background-color: $site-color
 $header-background-color: $site-color
-// TODO:  variable $header-dropdown-background-color ?
 $header-color: white
+$header-dropdown-background: white
+$header-dropdown-color: $main-color
 $header-logo-height: 42px !important
 
 $footer-color: white
@@ -49,6 +50,9 @@ $block-timeline-horizontal-background: $institute-color
 
 // Person
 $persons-avatar-background-color: #F5F5F5
+
+// Animations
+$arrow-ease-transition-2: cubic-bezier(0,.65,.4,1)
 
 // TODO: 
 //      variable pour les liens de la nav (pour le text-decoration) ?
