--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,6 +1,8 @@
 @import "configuration"
 @import "_theme/hugo-osuny"
+@import "blocks/key_figures"
 @import "design-system/typography"
 @import "sections/home"
 @import "sections/posts"
+@import "sections/programs"
 
