--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -1,15 +1,22 @@
 .programs 
-    li 
+    > li 
         a
-            @include media-breakpoint-up(md)
-                @include icon('arrow', after)
-                    font-size: px2rem(12)
-                    opacity: 0
-                    transform: translateX(-$spacing0)
-                    transition: all 0.55s $arrow-ease-transition-2
-            &:hover 
+            transition: color .3s
+            &::first-child
+                padding-right: 0 !important
+            + a 
+                font-size: $h6-size-md
+                white-space: nowrap
+            &:hover
                 color: $program-color
-                @include media-breakpoint-up(md)
-                    &::after
-                        opacity: 1 !important
-                        transform: translateX($spacing0)
+        @include media-breakpoint-up(md)
+        .title
+            @include icon('arrow', after)
+                font-size: px2rem(12)
+                opacity: 0
+                transform: translateX(-$spacing0)
+                transition: all 0.55s $arrow-ease-transition-2
+            &:hover 
+                &::after
+                    opacity: 1 !important
+                    transform: translateX($spacing0)
