--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,7 +1,9 @@
 @import "configuration"
 @import "_theme/hugo-osuny"
 @import "blocks/key_figures"
+@import "blocks/testimonials"
 @import "design-system/typography"
+@import "sections/diplomas"
 @import "sections/home"
 @import "sections/posts"
 @import "sections/programs"
