--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -29,6 +29,8 @@ $header-dropdown-background: white
 $header-dropdown-color: $main-color
 $header-logo-height: 42px !important
 
+$breadcrumb-color: rgba(white, .8)
+
 $footer-color: white
 $footer-background-color: $main-color
 
