--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -2,6 +2,7 @@
 @import "_theme/hugo-osuny"
 @import "blocks/key_figures"
 @import "blocks/testimonials"
+@import "design-system/breadcrumb"
 @import "design-system/typography"
 @import "sections/home"
 @import "sections/posts"
