--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -14,3 +14,9 @@
 .posts__section
     .posts
         @include grid(1)
+
+.table-infos
+    th
+        color: #6c757d
+        padding-top: $spacing2 / 3
+        padding-bottom: $spacing2 / 3
