--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,6 @@
 @import "configuration"
 @import "_theme/hugo-osuny"
+@import "blocks/call_to_action"
 @import "blocks/key_figures"
 @import "blocks/testimonials"
 @import "design-system/breadcrumb"
