--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -53,6 +53,9 @@ $block-timeline-horizontal-background: $institute-color
 // Person
 $persons-avatar-background-color: #F5F5F5
 
+// Layout posts list
+$posts-list-horizontal: true
+
 // Animations
 $arrow-ease-transition-2: cubic-bezier(0,.65,.4,1)
 
