--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -10,6 +10,12 @@
         time 
             color: #6c757d
 
+
+.block-posts
+    .posts
+        @include grid(1)
+        @include grid(2, md)
+
 .table-infos
     th
         color: #6c757d
