--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -5,6 +5,7 @@
 @import "blocks/key_figures"
 @import "blocks/testimonials"
 @import "design-system/breadcrumb"
+@import "design-system/pagination"
 @import "design-system/typography"
 @import "design-system/header"
 @import "sections/home"
