--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -50,6 +50,9 @@ $block-pages-card-page-background-hover: $site-color
 // Timeline
 $block-timeline-horizontal-background: $institute-color
 
+// Key figures
+$block-key_figures-number-font-size: px2rem(50)
+
 // Person
 $persons-avatar-background-color: #F5F5F5
 
