--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -4,6 +4,7 @@
 @import "blocks/gallery"
 @import "blocks/key_figures"
 @import "blocks/testimonials"
+@import "blocks/pages"
 @import "design-system/breadcrumb"
 @import "design-system/typography"
 @import "design-system/header"
