--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -3,6 +3,7 @@
 @import "blocks/call_to_action"
 @import "blocks/gallery"
 @import "blocks/key_figures"
+@import "blocks/posts"
 @import "blocks/testimonials"
 @import "design-system/breadcrumb"
 @import "design-system/pagination"
