Fixed line height posts

--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -1,6 +1,7 @@
 .posts
     .post 
         .title
+            line-height: 130%
             a
                 font-family: $heading-font-family
                 font-weight: 500
