--- a/assets/sass/design-system/pagination.sass
+++ b/assets/sass/design-system/pagination.sass
@@ -7,3 +7,12 @@
                 font-size: px2rem(18)
         span
             color: #6c757d
+
+
+.posts
+    + nav
+        .pagination:not(.pagination-between-pages)
+            li 
+                a::before,
+                    font-size: px2rem(12)
+                    vertical-align: baseline
