--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -7,9 +7,10 @@
 @import "blocks/testimonials"
 @import "blocks/pages"
 @import "design-system/breadcrumb"
+@import "design-system/header"
+@import "design-system/layout"
 @import "design-system/pagination"
 @import "design-system/typography"
-@import "design-system/header"
 @import "sections/home"
 @import "sections/posts"
 @import "sections/programs"
