Pagination post responsive

--- a/assets/sass/design-system/pagination.sass
+++ b/assets/sass/design-system/pagination.sass
@@ -8,11 +8,11 @@
         span
             color: #6c757d
     &-between-pages
-        
         li,
-        .previous,
-        .next
+        li.previous,
+        li.next
             a
+                &::before,
                 span::before
                     font-size: px2rem(12)
             
