--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -8,6 +8,7 @@
 @import "blocks/pages"
 @import "design-system/breadcrumb"
 @import "design-system/header"
+@import "design-system/hero"
 @import "design-system/layout"
 @import "design-system/pagination"
 @import "design-system/typography"
