--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -13,6 +13,7 @@
 @import "design-system/pagination"
 @import "design-system/typography"
 @import "sections/home"
+@import "sections/persons"
 @import "sections/posts"
 @import "sections/programs"
 
