--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -7,6 +7,7 @@
 @import "blocks/testimonials"
 @import "blocks/pages"
 @import "design-system/breadcrumb"
+@import "design-system/footer"
 @import "design-system/header"
 @import "design-system/hero"
 @import "design-system/layout"
