--- a/assets/sass/design-system/typography.sass
+++ b/assets/sass/design-system/typography.sass
@@ -101,12 +101,14 @@ p, li
 .lead
     &,
     p            
-        font-size: $h2-size
-        line-height: 130%
+        font-size: $h3-size
+        line-height: 110%
         @include media-breakpoint-up(md)
             font-size: $h1-size-md
+            line-height: 130%
         @include in-page-with-aside
-            font-size: $h3-size-md
+            @include media-breakpoint-up(md)
+                font-size: $h3-size-md
 
 .top 
     h2
