fixed arrow main page block

--- a/assets/sass/blocks/pages.sass
+++ b/assets/sass/blocks/pages.sass
@@ -1,5 +1,9 @@
 .block-pages
     &--list
+        .main-page
+            .title
+                a
+                    @include icon("arrow-right", after)
         .pages
             .page
                 .title
