--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,6 +1,7 @@
 @import "configuration"
 @import "_theme/hugo-osuny"
 @import "blocks/call_to_action"
+@import "blocks/files"
 @import "blocks/gallery"
 @import "blocks/key_figures"
 @import "blocks/posts"
