--- a/assets/sass/blocks/files.sass
+++ b/assets/sass/blocks/files.sass
@@ -6,5 +6,5 @@
                 background-color: $main-color
                 border-color: transparent
                 color: white
-        span span
-            font-size: $small-font-size
+        span 
+            line-height: 120%
