--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -57,7 +57,7 @@ $block-key_figures-number-font-size: px2rem(50)
 $persons-avatar-background-color: #F5F5F5
 
 // Layout posts list
-$posts-list-horizontal: true
+$posts-layout-list: true
 
 // Animations
 $arrow-ease-transition-2: cubic-bezier(0,.65,.4,1)
