--- a/assets/sass/_theme/partials/blocks/_blocks.sass
+++ b/assets/sass/_theme/partials/blocks/_blocks.sass
@@ -35,6 +35,9 @@
             & + .block-with-title
                 &::before
                     content: none
+        &.block-contact
+            ul li + li
+                border-color: $border-color
 
     &-chapo
         > *
