--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -23,7 +23,8 @@ $h6-size-md: px2rem(22)
 $h1-weight: bold
 
 $hero-background-color: $site-color
-$header-background-color: $site-color
+$header-background: $site-color
+$header-sticky-background: white
 $header-color: white
 $header-dropdown-background: white
 $header-dropdown-color: $main-color
