--- a/assets/sass/design-system/header.sass
+++ b/assets/sass/design-system/header.sass
@@ -1,6 +1,5 @@
 header[role="banner"]
     transition: background $header-transition, transform $header-transition
-    
     html.has-menu-opened &, &.is-sticky
         background-color: white
         color: black
@@ -10,6 +9,7 @@ header[role="banner"]
         .menu a
             color: black
             &:hover
+                color: black
                 text-decoration-color: black
         &::after
             background-color: rgba(black, 0.2)
